# Test_TestCustom

TestCustom/: CMakeLists.txt  Main.qml  main.cpp
TestCustom/Custom/: CMakeLists.txt  CustomElement.cpp  CustomElement.h
